# Headless

./: .env.example  .gitignore  README.md  global-setup.ts  headless.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
Incidents/: .gitignore  README.md  m365agents.local.yml  m365agents.yml
Incidents/.config/: octane.yaml
Incidents/.github/: .octane-metadata.json
Incidents/.github/agents/: CoverageAnalyzer.agent.md  FlakyTestContextAnalyzer.agent.md  FlakyTestFixer.agent.md  FlakyTestSubmitFixPR.agent.md  Octane.A11yTester.agent.md  Octane.FlakyTestFullFix.agent.md  Octane.PRInsights.agent.md  Researcher.agent.md
Incidents/.github/instructions/: documentation.instructions.md  octane.prd.instructions.md  octane.req.instructions.md  style.md
Incidents/.github/prompts/: Octane.A11yTester.Run.prompt.md  (+22 more)
Incidents/appPackage/: ai-plugin.json  declarativeAgent.json  instruction.txt  manifest.json
Incidents/env/: .env.dev
broker/: .env  .gitignore  Dockerfile  README.md  app.py  openapi-chatgpt.json  requirements.txt  start_server.py
broker/app/: __init__.py  auth.py  main.py  mcp_tools.py  models.py  registry.py  ws_aiohttp.py  ws_handler.py
runner/: .gitignore  README.md  build.py  config.json  config.sample.json  pyproject.toml  requirements.txt  runner.spec
runner/runner/: __init__.py  auth.py  browser.py  client.py  main.py  models.py  tools.py
src/jobs/: scrape-custom-app.ts  scrape-icm-declared-outages.ts  scrape-sharepoint-page.ts
src/utils/: auth-check.ts  auth-prompt.ts  csv.ts  dom.ts  storage.ts
(+27 files in other folders)
